--- a/json/.htaccess
+++ b/json/.htaccess
@@ -1,5 +1,5 @@
-ExpiresActive On
-ExpiresDefault A1
-Header append Cache-Control must-revalidate
-
-
+<IfModule mod_expires.c>
+	ExpiresActive On
+	ExpiresDefault A1
+	Header append Cache-Control must-revalidate
+</IfModule>
